--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
+    <body>
+        <h1>
+        </h1>
     </body>
   </html>
