--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
+    
+    <body>
     <head>
+        <h1>
         <title>My awesome web page</title>
+            </h1>
     </head>
 
     </body>
