--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>My awesome web page</title>
     </head>
     <body>
+        <img>
+        https://avatars.githubusercontent.com/u/82721675?v=4
         <h1>
         </h1>
     </body>
