--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
         <img src = https://avatars.githubusercontent.com/u/82721675?v=4>
         <h1>
         </h1>
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
     </body>
   </html>
